fix image distortion with object-fit cover, fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
+body {
+  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+}
+
 h3 {
   background-color: #FFCE99;
   color: #CD7C4B;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 7px;
+}
+
+h4 {
+  margin-left: 10px;
 }
 
 .spencer {
@@ -15,28 +23,27 @@ h3 {
   color: red;
 }
 
+.friends {
+  margin-left: 20px;
+}
+
 p {
   color: rgb(16, 62, 168);
 }
-.topPics {
+
+.topPics, .bottomPics {
   text-align: center;
   float: left;
   margin-right: 50px;
-
 }
 
-.bottomPics {
-  text-align: center;
-  float: left;
-  margin-right: 50px;
-  background-repeat: no-repeat;
-}
 .profilePics img {
   width: 100px;
   height: 100px;
   overflow: hidden;
   border: solid;
   border-color: rgb(16, 62, 168);
+  object-fit: cover;
 }
 
 .online {
@@ -45,7 +52,8 @@ p {
 }
 #view {
   float: right;
-  margin-right: 125px;
+  margin-right: 100px;
   font-weight: bold;
   font-size: 12px;
+  margin-top: 20px;
 }
